@@ -32,18 +32,18 @@ using System.Threading.Tasks;
 using SeriesIDParser.Caching;
 using SeriesIDParser.Models;
 
-[assembly: InternalsVisibleTo( "SeriesIDParser.Test" )]
+[assembly: InternalsVisibleTo("SeriesIDParser.Test")]
 
 namespace SeriesIDParser.Extensions
 {
 	internal static class InternalExtensions
 	{
-		internal static ParserResult ToParserResult( this MediaData mediaData, ParserSettings parserSettings )
+		internal static ParserResult ToParserResult(this MediaData mediaData, ParserSettings parserSettings)
 		{
-			ParserResult result = new ParserResult( mediaData.OriginalString, parserSettings, mediaData.AudioCodec, mediaData.VideoCodec,
+			ParserResult result = new ParserResult(mediaData.OriginalString, parserSettings, mediaData.AudioCodec, mediaData.VideoCodec,
 													mediaData.ProcessingDuration, mediaData.Resolutions, mediaData.Season, mediaData.Episodes, mediaData.Year,
 													mediaData.DetectedOldSpacingChar, mediaData.Exception, mediaData.IsSeries, mediaData.RemovedTokens, mediaData.State,
-													mediaData.FileExtension, mediaData.Title, mediaData.EpisodeTitle, mediaData.ReleaseGroup );
+													mediaData.FileExtension, mediaData.Title, mediaData.EpisodeTitle, mediaData.ReleaseGroup, mediaData.DimensionalType);
 
 			return result;
 		}
